<?xml version="1.0"?>
<package format="2">
  <name>fusion_estimator</name>
  <version>0.0.0</version>
  <description>sensor signal fusion estimation package (ROS1 version)</description>

  <!-- 维护者信息 -->
  <maintainer email="401435318@qq.com">Sun Minxing</maintainer>
  <license>Apache-2.0</license>

  <!-- 需要编译消息时, buildtool_depend: catkin + message_generation -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <!-- 运行时需要消息支持 -->
  <exec_depend>message_runtime</exec_depend>

  <!-- 其他依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

</package>
